# falcon-core

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  abstract.md  analysis_options.yaml  cspell.yaml  extensions.txt  extensions.yaml  install.sh  manage_extensions.cmake
.github/workflows/: build.yml  build_backend.yml  build_gui.yml  release_all.yml  static_check.yml
benchmark/: 8x32.yaml  bench.yaml  falcon  i5_4c.yaml  i9_8c.yaml  micro.py  nlx.yaml  report.py  report_out.py
docs/: conf.py  content_table.rst  dev_guide.rst  extending_falcon.rst  index.rst  installation.rst  requirements.txt
docs/doxyfile/: Doxyfile
docs/extensions/: extend_datatype.rst  extend_processor.rst  tools.rst
docs/internals/: command_system.rst  config_system.rst  datastream_system.rst  graph_api.rst  graph_life_cycle.rst  graph_system.rst  logging_system.rst  thread_management.rst  utilities.rst
docs/manual/: binary_installation.rst  docker_installation.rst  installation.rst  usage.rst
falcon/: .CMakeLists.txt.kate-swp  CMakeLists.txt  commandhandler.cpp  commandhandler.hpp  commandsource.cpp  commandsource.hpp  configuration.cpp  configuration.hpp.in  connectionparser.cpp  connectionparser.hpp  connections.cpp  connections.hpp  context.hpp  datatype.fbs  device.cpp  device.hpp  device_common.cpp  device_common.hpp  device_manager.cpp  device_manager.hpp  dummy_type.cpp  exceptions.hpp  f_idata.cpp  f_idata.hpp  f_iprocessor.cpp  f_iprocessor.hpp  graphexceptions.hpp  graphmanager.cpp  graphmanager.hpp  idata.cpp  idata.hpp  ifilter.hpp  ifilter.ipp  iprocessor.cpp  iprocessor.hpp  isink.hpp  isink.ipp  isource.hpp  isource.ipp  istreamports.cpp  (+20 more)
falcon_gui/: README.md  analysis_options.yaml  pubspec.yaml  todo.txt
falcon_gui/falcon/: config.yaml  debug_config.yaml
falcon_gui/fens/: abstract.md  changelog_report.md  commits.txt
falcon_gui/lib/: draggable_node.dart  editor_view.dart  main.dart  node_data.dart  node_item.dart  node_manager.dart
falcon_gui/lib/dialogs/: dialog_view.dart  on_close_gui_dialog.dart  other_falcon_instances_banner.dart  priority_dialog.dart  status_dialog.dart
falcon_gui/lib/graph_editor/: controls_bar.dart  editor_view.dart  graph_controls.dart  graph_editor.dart  logs_panel.dart  processor_item.dart  processor_options.dart  processor_ports.dart  processors_panel.dart  proessor_item.dart  status_bar.dart
falcon_gui/lib/live_view/: connecting_view.dart  dataframe.md  falcon_websocket_controller.dart  falcon_ws_message.dart  live_plot_painter.dart  live_view.dart  live_view_controller.dart  live_view_isolate.dart  plot_drawer.dart  signal_buffer.dart  signal_parser.dart  value_sliders.dart
falcon_gui/lib/live_view/models/: live_view_isolate_config.dart
falcon_gui/lib/live_view/widgets/: param_sliders.dart
falcon_gui/lib/model/: a.txt  falcon_graph.dart  falcon_log.dart  falcon_state.dart  falcon_zmq_command.dart  graph_serializer.dart  graph_to_yaml.dart  notes.txt  processor_data.dart  processor_definitions.dart  processor_templates.dart  smile.yaml
falcon_gui/lib/settings/: falcon_priority_status.dart  local_backend_settings.dart  settings_view.dart  theme_mode_setting.dart
falcon_gui/lib/state/: available_processors.dart  example_graph.dart  falcon_manager.dart  falcon_state.dart  falcon_zmq.dart  graph_manager.dart  node_manager.dart  processor_definitions.dart  processor_templates.dart
falcon_gui/lib/utils/: curve_hittest.dart  debounce.dart  dialog_view.dart  file_picker.dart  geometry_algorithms.dart  killing_falcon_banner.dart  local_config.dart  logger.dart  misc.dart  other_falcon_instances_banner.dart  paths.dart  priority_dialog.dart  regex.dart  status_dialog.dart  theme.dart  yaml_scalar.dart  zmq_ffi.dart
falcon_gui/lib/utils/zmq/: zmq_constants.dart  zmq_ffi.dart  zmq_isolate_receiver.dart  zmq_isolate_worker.dart
falcon_gui/linux/: CMakeLists.txt
falcon_gui/linux/flutter/: generated_plugins.cmake
falcon_gui/linux/runner/: my_application.cc
lib/: CMakeLists.txt
lib/cmdline/: cmdline.h  test.cpp  test2.cpp
lib/context/: context.hpp  runinfo.hpp
lib/disruptor/: batch_descriptor.h  claim_strategy.cpp  claim_strategy.h  event_processor.h  event_publisher.h  exception_handler.h  exceptions.h  interface.h  ring_buffer.h  sequence.cpp  sequence.h  sequence_barrier.h  sequencer.h  utils.h  wait_strategy.cpp  wait_strategy.h
lib/factory/: factory.hpp
lib/logging/: CMakeLists.txt  customsink.cpp  customsink.hpp  g3loglevels.hpp  log.hpp
lib/options/: CMakeLists.txt  options.cpp  options.hpp  units.hpp  validation.hpp  value.hpp
lib/utilities/: CMakeLists.txt  configuration.cpp  configuration.hpp  filesystem.cpp  filesystem.hpp  general.cpp  general.hpp  iterators.hpp  keyboard.cpp  keyboard.hpp  math_numeric.cpp  math_numeric.hpp  math_numeric.ipp  serialization.cpp  serialization.hpp  string.cpp  string.hpp  time.cpp  time.hpp  tsc_duration_clock.cpp  zmqutil.cpp  zmqutil.hpp
scripts/: cmake.sh  format.sh  make.sh  tidy.sh
scripts/cmake/: ParseExtensions.cmake
scripts/setup/: install_clang.sh  install_clang_format.sh  install_cmake.sh  install_deps.sh  install_llvm.sh
tests/: CMakeLists.txt  graph_parser_test.cpp  t_main.cpp
tests/testing/: CMakeLists.txt  t_idata.cpp  t_idata.hpp  t_iprocessor.hpp  t_istreamports.hpp  t_streamports.hpp  t_streamports.ipp  test_utilities.hpp
